--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          path: "${{ github.repository }}"
+          path: "organicveggie.postgres_docker"
       - name: Molecule
         uses: gofrolist/molecule-action@v2
         with:
           molecule_options: --debug
           molecule_command: test
-          molecule_args: --scenario-name ${{ matrix.scenario }}
+          molecule_args: --scenario-name ${{ matrix.scenario }} -d docker
         env:
           ANSIBLE_FORCE_COLOR: "1"
