Fix a myriad of linter warners
Use docker_container module to restart. Remove redundant lint calls. Use fully qualified task names.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: Restart PostgreSQL Docker Container
-  ansible.builtin.shell: "docker container restart {{ postgres_docker_name }}"
+  community.docker.docker_container:
+    name: "{{ postgres_docker_name }}"
+    state: "started"
+    restart: yes
