--- a/molecule/init_scripts/converge.yml
+++ b/molecule/init_scripts/converge.yml
@@ -9,11 +9,13 @@
 
   pre_tasks:
     - name: Update apt cache
-      ansible.builtin.apt: update_cache=yes cache_valid_time=600
+      ansible.builtin.apt:
+        cache_valid_time: 600
+        update_cache: yes
       when: ansible_os_family == 'Debian'
 
     - name: Wait for systemd to complete initialization
-      command: systemctl is-system-running
+      ansible.builtin.command: systemctl is-system-running # noqa: command-instead-of-module
       register: systemctl_status
       until: >
         'running' in systemctl_status.stdout or
