--- a/molecule/init_scripts/verify.yml
+++ b/molecule/init_scripts/verify.yml
@@ -15,7 +15,7 @@
       register: volume_info_init
 
     - name: Verify init volume exists
-      assert:
+      ansible.builtin.assert:
         that: volume_info_init.exists
 
     - name: Get info on conf volume
@@ -24,7 +24,7 @@
       register: volume_info_conf
 
     - name: Verify conf volume exists
-      assert:
+      ansible.builtin.assert:
         that: volume_info_conf.exists
 
     - name: Get info on data volume
@@ -33,7 +33,7 @@
       register: volume_info_data
 
     - name: Verify data volume exists
-      assert:
+      ansible.builtin.assert:
         that: volume_info_data.exists
 
     - name: Get info on container
@@ -42,7 +42,7 @@
       register: container_info
 
     - name: Verify container exists and is running
-      assert:
+      ansible.builtin.assert:
         that:
           - container_info.exists
           - container_info.container['State']['Running']
@@ -54,6 +54,6 @@
       register: psql_result
     
     - name: Verify table data output
-      assert:
+      ansible.builtin.assert:
         that:
           - psql_result.stdout_lines == ["42", "54"]
