--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
-- import_tasks: setup.yml
+- name: Setup PostgreSQL on Docker
+  ansible.builtin.import_tasks: setup.yml
   tags:
     - postgres
     - postgres_docker
