--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
-- name: Setup PostgreSQL on Docker
-  ansible.builtin.import_tasks: setup.yml
+- name: "Setup PostgreSQL on Docker"
+  ansible.builtin.import_tasks: "setup.yml"
   tags:
-    - postgres
-    - postgres_docker
-    - postgres_docker:setup
-    - postgresql
-    - postgresql_docker
-    - postgresql_docker:setup
+    - "postgres"
+    - "postgres_docker"
+    - "postgres_docker:setup"
+    - "postgresql"
+    - "postgresql_docker"
+    - "postgresql_docker:setup"
