--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,65 +1,69 @@
-name: Molecule
+---
+name: "Molecule"
 
 on:
   push:
     branches:
-      - main
+      - "main"
   pull_request:
     branches:
-      - main
-  workflow_dispatch:
+      - "main"
+  workflow_dispatch: null
 
 jobs:
   lint:
-    name: Lint
-    runs-on: ubuntu-latest
+    name: "Lint"
+    runs-on: "ubuntu-latest"
     steps:
-      - name: Check out the codebase.
-        uses: actions/checkout@v2
+      - name: "Check out the codebase."
+        uses: "actions/checkout@v2"
         with:
           path: 'organicveggie.postgres_docker'
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: "Set up Python"
+        uses: "actions/setup-python@v2"
         with:
           python-version: 3.8
 
-      - name: Install lint dependencies.
-        run: pip3 install yamllint
+      - name: "Install lint dependencies."
+        run: "pip3 install yamllint"
 
-      - name: Lint code.
+      - name: "Lint code."
         run: |
-          yamllint .
+          yamllint -c .yamllit -f github .
 
   molecule:
-    name: Molecule
-    runs-on: ubuntu-latest
+    name: "Molecule"
+    runs-on: "ubuntu-latest"
     strategy:
       fail-fast: false
       matrix:
         scenario:
-          - default
-          - custom_names
-          - init_scripts
-          - no_volumes
-          - traefik
+          - "default"
+          - "custom_names"
+          - "init_scripts"
+          - "no_volumes"
+          - "traefik"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: "Checkout"
+        uses: "actions/checkout@v2"
         with:
           path: "organicveggie.postgres_docker"
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: "Set up Python"
+        uses: "actions/setup-python@v2"
         with:
           python-version: 3.8
 
-      - name: Install test dependencies
+      - name: "Install test dependencies"
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install ansible molecule molecule[docker]
 
-      - name: Run Molecule testts
+      - name: "Run Molecule testts"
         run: |
-          cd organicveggie.postgres_docker
           molecule --debug test --scenario-name ${{ matrix.scenario }} -d docker
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_PLAYBOOK: "${{ matrix.playbook }}"
