--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,18 +1,18 @@
 ---
 galaxy_info:
-  role_name: postgres_docker
-  author: organicveggie
-  description: Role to install PostgreSQL Docker container. 
-  license: Apache
+  role_name: "postgres_docker"
+  author: "organicveggie"
+  description: "Role to install PostgreSQL Docker container."
+  license: "Apache"
   min_ansible_version: "2.8"
   platforms:
-    - name: Ubuntu
+    - name: "Ubuntu"
       versions:
-        - focal
-        - jammy
+        - "focal"
+        - "jammy"
   galaxy_tags:
-    - postgres
-    - postgresql
-    - docker
+    - "postgres"
+    - "postgresql"
+    - "docker"
 
 dependencies: []
