--- a/molecule/custom_names/molecule.yml
+++ b/molecule/custom_names/molecule.yml
@@ -1,26 +1,26 @@
 ---
 dependency:
-  name: galaxy
+  name: "galaxy"
   options:
-    requirements-file: molecule/resources/requirements.yml
-    role-file: molecule/resources/requirements.yml
+    requirements-file: "molecule/resources/requirements.yml"
+    role-file: "molecule/resources/requirements.yml"
 
 driver:
-  name: docker
+  name: "docker"
 
 platforms:
-  - name: instance
+  - name: "instance"
     image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2004}-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    command: "${MOLECULE_DOCKER_COMMAND:-''}"
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:rw
-    privileged: true
-    pre_build_image: true
+      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    privileged: "true"
+    pre_build_image: "true"
 
 provisioner:
-  name: ansible
+  name: "ansible"
   playbooks:
-    converge: ../resources/playbooks/converge.yml
+    converge: "../resources/playbooks/converge.yml"
   inventory:
     host_vars:
       instance:
@@ -33,4 +33,4 @@ provisioner:
         postgres_docker_network_create: "true"
 
 verifier:
-  name: ansible
+  name: "ansible"
