--- a/molecule/custom_names/verify.yml
+++ b/molecule/custom_names/verify.yml
@@ -1,6 +1,7 @@
-- name: Verify
-  hosts: all
-  gather_facts: false
+---
+- name: "Verify"
+  hosts: "all"
+  gather_facts: "false"
 
   vars:
     pg_docker_name: "pgcustom"
@@ -9,40 +10,40 @@
     pg_docker_volume_name_data: "pgcustom-data"
 
   tasks:
-    - name: Get info on init volume
+    - name: "Get info on init volume"
       community.docker.docker_volume_info:
         name: "{{ pg_docker_volume_name_init }}"
-      register: volume_info_init
+      register: "volume_info_init"
 
-    - name: Verify init volume exists
+    - name: "Verify init volume exists"
       ansible.builtin.assert:
-        that: volume_info_init.exists
+        that: "volume_info_init.exists"
 
-    - name: Get info on conf volume
+    - name: "Get info on conf volume"
       community.docker.docker_volume_info:
         name: "{{ pg_docker_volume_name_conf }}"
-      register: volume_info_conf
+      register: "volume_info_conf"
 
-    - name: Verify conf volume exists
+    - name: "Verify conf volume exists"
       ansible.builtin.assert:
-        that: volume_info_conf.exists
+        that: "volume_info_conf.exists"
 
-    - name: Get info on data volume
+    - name: "Get info on data volume"
       community.docker.docker_volume_info:
         name: "{{ pg_docker_volume_name_data }}"
-      register: volume_info_data
+      register: "volume_info_data"
 
-    - name: Verify data volume exists
+    - name: "Verify data volume exists"
       ansible.builtin.assert:
-        that: volume_info_data.exists
+        that: "volume_info_data.exists"
 
-    - name: Get info on container
+    - name: "Get info on container"
       community.docker.docker_container_info:
         name: "{{ pg_docker_name }}"
-      register: container_info
+      register: "container_info"
 
-    - name: Verify container exists and is running
+    - name: "Verify container exists and is running"
       ansible.builtin.assert:
         that:
-          - container_info.exists
-          - container_info.container['State']['Running']
+          - "container_info.exists"
+          - "container_info.container['State']['Running']"
