--- a/molecule/resources/requirements.yml
+++ b/molecule/resources/requirements.yml
@@ -1,10 +1,11 @@
+---
 collections:
-  - name: community.docker
+  - name: "community.docker"
     version: ">=1.2.0,<2"
-  - name: community.general
+  - name: "community.general"
     version: ">=2,<3"
 
 roles:
-  - src: geerlingguy.repo-epel
-  - src: geerlingguy.pip
-  - src: geerlingguy.docker
+  - src: "geerlingguy.repo-epel"
+  - src: "geerlingguy.pip"
+  - src: "geerlingguy.docker"
