Change directories before running tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: "Check out the codebase."
         uses: "actions/checkout@v2"
         with:
-          path: 'organicveggie.postgres_docker'
+          path: "organicveggie.postgres_docker"
 
       - name: "Set up Python"
         uses: "actions/setup-python@v2"
@@ -30,6 +30,7 @@ jobs:
 
       - name: "Lint code."
         run: |
+          cd organicveggie.postgres_docker
           yamllint -c .yamllit -f github -s .
           ansible-lint
 
@@ -63,6 +64,7 @@ jobs:
 
       - name: "Run Molecule testts"
         run: |
+          cd organicveggie.postgres_docker
           molecule --debug test --scenario-name ${{ matrix.scenario }} -d docker
         env:
           PY_COLORS: '1'
