Fix typo in yamllint config name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: "Lint code."
         run: |
           cd organicveggie.postgres_docker
-          yamllint -c .yamllit -f github -s .
+          yamllint -c .yamllint -f github -s .
           ansible-lint
 
   molecule:
